soundness: the FFI row had the same pasted-"—" shape as the macro row, and two cells were wrong
Audited every FFI/extern/opaque-foreign-call cell per engine, measured against live fixtures
and real binaries rather than reasoned from the row's prose (same discipline the macro-row
correction used). rust-scan's direct extern "C" handling is genuinely sound (native:extern fn)
but a libc/nix/rustix call the syscall-name table deliberately leaves unclassified vanishes
with zero disclosure when no classified sibling call is nearby (R59, open). rust-deep's prior
"verified by construction" claim was false: its own callgraph proves it visits a local
extern "C" declaration, but the effect layer attaches nothing to it (R60, open) — worse than
rust-scan on the identical seam, in the engine positioned as the soundness backstop. swift's
"—" was as false as the macro row's: raw import Darwin/Glibc free-function calls,
@_silgen_name, and dlopen/dlsym + a function-pointer call all read silent-pure, deny Exec/
deny Fs passing at exit 0 over code that performs the effect (R61, open). java and ts were
independently re-measured across native methods / JNA-style zero-impl dispatch / Panama
(java) and native addons (untyped + .d.ts-typed) / WASM / process.binding (ts) and are
genuinely CLOSED. None of R59/R60/R61 fixed here — candor-spec doesn't own candor-rust or
candor-swift; filed against each. conformance/run.sh -> OK, part.sh --check -> OK,
part_declarations.py clean; no code or conformance/run.sh changes, documentation only.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01NTakgLsXzAB3DfuEEP1L6R